--- a/configs/iw-master.config
+++ b/configs/iw-master.config
@@ -873,11 +873,16 @@ CONFIG_LIBCURL_CRYPTO_AUTH=y
 CONFIG_LIBCURL_TLS_SRP=y
 CONFIG_LIBCURL_THREADED_RESOLVER=y
 CONFIG_LIBCURL_UNIX_SOCKETS=y
+CONFIG_PACKAGE_libdeflate=y
 CONFIG_PACKAGE_libdevmapper=y
+CONFIG_PACKAGE_libdht=y
 CONFIG_PACKAGE_libdouble-conversion=y
 CONFIG_PACKAGE_libe2p=y
 CONFIG_PACKAGE_libelf=y
+CONFIG_PACKAGE_libev=y
+CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libevent2-core=y
+CONFIG_PACKAGE_libevent2-pthreads=y
 CONFIG_PACKAGE_libexif=y
 CONFIG_PACKAGE_libext2fs=y
 CONFIG_PACKAGE_libf2fs=y
@@ -888,6 +893,7 @@ CONFIG_FFMPEG_X86ASM=y
 CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libgmp=y
 CONFIG_PACKAGE_libid3tag=y
+CONFIG_PACKAGE_libidn2=y
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libjpeg-turbo=y
 CONFIG_PACKAGE_libjson-c=y
@@ -919,6 +925,7 @@ CONFIG_PCRE2_JIT_ENABLED=y
 CONFIG_PACKAGE_libpcre2-16=y
 CONFIG_PACKAGE_libpcre2-32=y
 CONFIG_PACKAGE_libpopt=y
+CONFIG_PACKAGE_libpsl=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libsmartcols=y
 CONFIG_PACKAGE_libss=y
@@ -934,11 +941,12 @@ CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libuclient=y
 CONFIG_PACKAGE_libucode=y
 CONFIG_PACKAGE_libudebug=y
+CONFIG_PACKAGE_libunistring=y
 CONFIG_PACKAGE_libustream-openssl=y
+CONFIG_PACKAGE_libutp=y
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_libwrap=y
-CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_terminfo=y
@@ -951,15 +959,13 @@ CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-lua-runtime=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
-CONFIG_PACKAGE_luci-mod-dashboard=y
 CONFIG_PACKAGE_luci-mod-network=y
 CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
+CONFIG_PACKAGE_luci-app-adblock-fast=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
-CONFIG_PACKAGE_luci-app-design-config=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
@@ -971,27 +977,25 @@ CONFIG_PACKAGE_luci-app-nfs=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
 CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-rclone=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=y
+CONFIG_PACKAGE_luci-app-transmission=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
-CONFIG_PACKAGE_luci-theme-design=y
 CONFIG_PACKAGE_luci-theme-edge=y
-CONFIG_PACKAGE_luci-theme-infinityfreedom=y
-CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-lib-base=y
@@ -1001,12 +1005,10 @@ CONFIG_PACKAGE_luci-lib-nixio=y
 CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
-CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-adblock-fast-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-dashboard-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-design-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
@@ -1017,18 +1019,22 @@ CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-rclone-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-transmission-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
 CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_qbittorrent-enhanced-edition=y
+CONFIG_PACKAGE_transmission-cli=y
+CONFIG_PACKAGE_transmission-daemon=y
+CONFIG_PACKAGE_transmission-remote=y
+CONFIG_PACKAGE_transmission-web-control=y
 CONFIG_PACKAGE_rclone-ng=y
 CONFIG_PACKAGE_rclone-webui-react=y
 CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_aria2=y
 CONFIG_ARIA2_OPENSSL=y
-CONFIG_ARIA2_LIBXML2=y
+CONFIG_ARIA2_NOXML=y
 CONFIG_ARIA2_BITTORRENT=y
-CONFIG_ARIA2_METALINK=y
 CONFIG_ARIA2_SFTP=y
 CONFIG_ARIA2_ASYNC_DNS=y
 CONFIG_ARIA2_COOKIE=y
@@ -1054,8 +1060,6 @@ CONFIG_PCAP_DNSPROXY_LIBPCAP=y
 CONFIG_PCAP_DNSPROXY_LIBSODIUM=y
 CONFIG_PCAP_DNSPROXY_TLS=y
 CONFIG_PCAP_DNSPROXY_LISTENPORT=1053
-CONFIG_PACKAGE_v2ray-geoip=y
-CONFIG_PACKAGE_v2ray-geosite=y
 CONFIG_PACKAGE_wsdd2=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_openssh-sftp-server=y
@@ -1066,7 +1070,8 @@ CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_microsocks=y
-CONFIG_PACKAGE_naiveproxy=y
+CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
+CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
 CONFIG_PACKAGE_sing-box=y
 CONFIG_SING_BOX_BUILD_CLASH_API=y
 CONFIG_SING_BOX_BUILD_ECH=y
@@ -1078,9 +1083,10 @@ CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_tuic-client=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
+CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PACKAGE_xray-plugin=y
 CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_hysteria=y
+CONFIG_PACKAGE_adblock-fast=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_krb5-libs=y
 CONFIG_PACKAGE_odhcp6c=y
@@ -1092,6 +1098,7 @@ CONFIG_PACKAGE_ppp-mod-pppoe=y
 CONFIG_PACKAGE_rpcbind=y
 CONFIG_RPCBIND_LIBWRAP=y
 CONFIG_RPCBIND_RMTCALLS=y
+CONFIG_PACKAGE_simple-obfs-client=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_uclient-fetch=y
 CONFIG_PACKAGE_xray-core=y
@@ -1126,4 +1133,3 @@ CONFIG_PACKAGE_smartmontools=y
 CONFIG_STRACE_NONE=y
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-lua=y
-CONFIG_OVERRIDE_PKGS="chinadns-ng dns2socks dns2tcp gn hysteria ipt2socks lua-maxminddb lua-neturl luci-app-argon-config luci-app-frpc luci-theme-argon microsocks mosdns naiveproxy redsocks2  tcping trojan tuic-client v2ray-core v2ray-plugin v2raya xray-core xray-plugin"
