--- a/configs/immortalwrt-21.02.config
+++ b/configs/immortalwrt-21.02.config
@@ -108,10 +108,6 @@ CONFIG_x86_64=y
 CONFIG_ARCH="x86_64"
 CONFIG_EXTERNAL_CPIO=""
 CONFIG_TARGET_ROOTFS_TARGZ=y
-CONFIG_TARGET_ROOTFS_EXT4FS=y
-CONFIG_TARGET_EXT4_RESERVED_PCT=0
-CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
-CONFIG_TARGET_EXT4_BLOCKSIZE=4096
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
@@ -134,7 +130,7 @@ CONFIG_DOWNLOAD_CHECK_CERTIFICATE=y
 CONFIG_DISPLAY_SUPPORT=y
 CONFIG_SHADOW_PASSWORDS=y
 CONFIG_KERNEL_BUILD_USER="LoogCP"
-CONFIG_KERNEL_BUILD_DOMAIN="ImmortalWrt"
+CONFIG_KERNEL_BUILD_DOMAIN=""
 CONFIG_KERNEL_PRINTK=y
 CONFIG_KERNEL_SWAP=y
 CONFIG_KERNEL_DEBUG_FS=y
@@ -590,11 +586,9 @@ CONFIG_PACKAGE_urandom-seed=y
 CONFIG_PACKAGE_urngd=y
 CONFIG_PACKAGE_usign=y
 CONFIG_ZABBIX_POSTGRESQL=y
-CONFIG_PACKAGE_htop=y
-CONFIG_HTOP_LMSENSORS=y
+CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_grub2=y
 CONFIG_PACKAGE_grub2-efi=y
-CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_autocore-x86=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_ipv6helper=y
@@ -673,10 +667,9 @@ CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
 CONFIG_PACKAGE_kmod-ip6tables=y
 CONFIG_PACKAGE_kmod-ipt-conntrack=y
-CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-core=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
 CONFIG_PACKAGE_kmod-ipt-fullconenat=y
-CONFIG_PACKAGE_kmod-ipt-iprange=y
 CONFIG_PACKAGE_kmod-ipt-ipset=y
 CONFIG_PACKAGE_kmod-ipt-nat=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
@@ -694,6 +687,7 @@ CONFIG_PACKAGE_kmod-nf-nathelper-extra=y
 CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_PACKAGE_kmod-nf-reject6=y
 CONFIG_PACKAGE_kmod-nfnetlink=y
+CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_kmod-8139cp=y
 CONFIG_PACKAGE_kmod-8139too=y
 CONFIG_PACKAGE_kmod-bnx2=y
@@ -717,7 +711,7 @@ CONFIG_PACKAGE_kmod-tg3=y
 CONFIG_PACKAGE_kmod-tulip=y
 CONFIG_PACKAGE_kmod-vmxnet3=y
 CONFIG_PACKAGE_kmod-dnsresolver=y
-CONFIG_PACKAGE_kmod-fast-classifier=y
+CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
 CONFIG_PACKAGE_kmod-mdio=y
@@ -726,9 +720,9 @@ CONFIG_PACKAGE_kmod-mppe=y
 CONFIG_PACKAGE_kmod-pppoe=y
 CONFIG_PACKAGE_kmod-pppox=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
+CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
 CONFIG_PACKAGE_kmod-sit=y
 CONFIG_PACKAGE_kmod-slhc=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-button-hotplug=y
 CONFIG_PACKAGE_kmod-pps=y
@@ -764,34 +758,32 @@ CONFIG_PACKAGE_luci-lib-fs=y
 CONFIG_NODEJS_16=y
 CONFIG_NODEJS_NPM_CACHE_DIR=""
 CONFIG_PACKAGE_libpython3=y
-CONFIG_PACKAGE_python3=y
 CONFIG_PACKAGE_python3-asyncio=y
 CONFIG_PACKAGE_python3-base=y
-CONFIG_PACKAGE_python3-cgi=y
-CONFIG_PACKAGE_python3-cgitb=y
 CONFIG_PACKAGE_python3-codecs=y
 CONFIG_PACKAGE_python3-ctypes=y
-CONFIG_PACKAGE_python3-dbm=y
-CONFIG_PACKAGE_python3-decimal=y
-CONFIG_PACKAGE_python3-distutils=y
 CONFIG_PACKAGE_python3-email=y
-CONFIG_PACKAGE_python3-gdbm=y
 CONFIG_PACKAGE_python3-light=y
 CONFIG_PACKAGE_python3-logging=y
-CONFIG_PACKAGE_python3-lzma=y
-CONFIG_PACKAGE_python3-multiprocessing=y
-CONFIG_PACKAGE_python3-ncurses=y
 CONFIG_PACKAGE_python3-openssl=y
-CONFIG_PACKAGE_python3-pkg-resources=y
-CONFIG_PACKAGE_python3-pydoc=y
-CONFIG_PACKAGE_python3-readline=y
-CONFIG_PACKAGE_python3-setuptools=y
 CONFIG_PACKAGE_python3-sqlite3=y
-CONFIG_PACKAGE_python3-unittest=y
 CONFIG_PACKAGE_python3-urllib=y
 CONFIG_PACKAGE_python3-xml=y
+CONFIG_PACKAGE_ruby=y
+CONFIG_PACKAGE_ruby-bigdecimal=y
+CONFIG_PACKAGE_ruby-date=y
+CONFIG_PACKAGE_ruby-dbm=y
+CONFIG_PACKAGE_ruby-digest=y
+CONFIG_PACKAGE_ruby-enc=y
+CONFIG_PACKAGE_ruby-forwardable=y
+CONFIG_PACKAGE_ruby-pstore=y
+CONFIG_PACKAGE_ruby-psych=y
+CONFIG_PACKAGE_ruby-stringio=y
+CONFIG_PACKAGE_ruby-strscan=y
+CONFIG_PACKAGE_ruby-yaml=y
 CONFIG_PACKAGE_libbz2=y
-CONFIG_PACKAGE_liblzma=y
+CONFIG_PACKAGE_libzstd=y
+CONFIG_ZSTD_OPTIMIZE_O3=y
 CONFIG_PACKAGE_libsqlite3=y
 CONFIG_SQLITE3_COLUMN_METADATA=y
 CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
@@ -799,6 +791,7 @@ CONFIG_SQLITE3_FTS3=y
 CONFIG_SQLITE3_FTS4=y
 CONFIG_SQLITE3_FTS5=y
 CONFIG_SQLITE3_RTREE=y
+CONFIG_PACKAGE_libacl=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libfuse=y
 CONFIG_PACKAGE_libfuse3=y
@@ -806,14 +799,13 @@ CONFIG_PACKAGE_libsysfs=y
 CONFIG_PACKAGE_libip4tc=y
 CONFIG_PACKAGE_libip6tc=y
 CONFIG_PACKAGE_libxtables=y
+CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_libQt6Core=y
 CONFIG_PACKAGE_libQt6Network=y
 CONFIG_PACKAGE_libQt6Sql=y
 CONFIG_PACKAGE_libQt6Xml=y
 CONFIG_PACKAGE_qt6-plugin-libqopensslbackend=y
 CONFIG_PACKAGE_qt6-plugin-libqsqlite=y
-CONFIG_PACKAGE_libmbedtls=y
-CONFIG_LIBMBEDTLS_HAVE_SSE2=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_OPENSSL_OPTIMIZE_SPEED=y
 CONFIG_OPENSSL_WITH_ASM=y
@@ -845,7 +837,6 @@ CONFIG_WOLFSSL_HAS_OPENVPN=y
 CONFIG_WOLFSSL_ALT_NAMES=y
 CONFIG_PACKAGE_alsa-ucm-conf=y
 CONFIG_PACKAGE_alsa-lib=y
-CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_boost=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-static-and-shared-libs=y
@@ -859,6 +850,8 @@ CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libblobmsg-json=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libcap=y
+CONFIG_PACKAGE_libcap-bin=y
+CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
 CONFIG_PACKAGE_libcares=y
 CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libcurl=y
@@ -886,19 +879,16 @@ CONFIG_PACKAGE_libext2fs=y
 CONFIG_PACKAGE_libf2fs=y
 CONFIG_PACKAGE_libfdisk=y
 CONFIG_PACKAGE_libffi=y
+CONFIG_PACKAGE_libffmpeg-audio-dec=y
 CONFIG_FFMPEG_X86ASM=y
-CONFIG_PACKAGE_libffmpeg-full=y
 CONFIG_PACKAGE_libflac=y
-CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_libgmp=y
 CONFIG_PACKAGE_libid3tag=y
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libjpeg-turbo=y
 CONFIG_PACKAGE_libjson-c=y
 CONFIG_PACKAGE_libkeyutils=y
-CONFIG_PACKAGE_libltdl=y
 CONFIG_PACKAGE_liblua=y
-CONFIG_PACKAGE_liblua5.3=y
 CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblzo=y
@@ -915,7 +905,6 @@ CONFIG_PACKAGE_libnl-core=y
 CONFIG_PACKAGE_libnl-genl=y
 CONFIG_PACKAGE_libnl-tiny=y
 CONFIG_PACKAGE_libogg=y
-CONFIG_PACKAGE_libopus=y
 CONFIG_PACKAGE_libpcre=y
 CONFIG_PCRE_JIT_ENABLED=y
 CONFIG_PACKAGE_libpcre2=y
@@ -924,6 +913,7 @@ CONFIG_PACKAGE_libpcre2-16=y
 CONFIG_PACKAGE_libpcre2-32=y
 CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libreadline=y
+CONFIG_PACKAGE_libruby=y
 CONFIG_PACKAGE_libsensors=y
 CONFIG_PACKAGE_libsmartcols=y
 CONFIG_PACKAGE_libsodium=y
@@ -961,6 +951,7 @@ CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-appfilter=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_luci-app-design-config=y
@@ -973,26 +964,15 @@ CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-gowebdav=y
 CONFIG_PACKAGE_luci-app-ksmbd=y
 CONFIG_PACKAGE_luci-app-minidlna=y
+CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-nfs=y
+CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
 CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-rclone=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
@@ -1002,26 +982,20 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Tuic-Client=y
 CONFIG_PACKAGE_luci-app-turboacc=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_FAST_CLASSIFIER=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE_CM=y
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-design=y
 CONFIG_PACKAGE_luci-theme-edge=y
-CONFIG_PACKAGE_luci-theme-infinityfreedom=y
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-openwrt-2020=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-lib-base=y
@@ -1033,6 +1007,7 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
 CONFIG_PACKAGE_luci-i18n-appfilter-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cifs-mount-zh-cn=y
@@ -1044,11 +1019,12 @@ CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-gowebdav-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ksmbd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-nfs-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-rclone-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
@@ -1058,12 +1034,8 @@ CONFIG_POSTFIX_LDAP=y
 CONFIG_POSTFIX_CDB=y
 CONFIG_POSTFIX_SQLITE=y
 CONFIG_POSTFIX_PCRE=y
-CONFIG_PACKAGE_ffmpeg=y
 CONFIG_PACKAGE_minidlna=y
-CONFIG_PACKAGE_you-get=y
-CONFIG_PACKAGE_youtube-dl=y
-CONFIG_PACKAGE_opentracker=y
-CONFIG_PACKAGE_opentracker6=y
+CONFIG_PACKAGE_yt-dlp=y
 CONFIG_PACKAGE_qbittorrent-enhanced-edition=y
 CONFIG_PACKAGE_rclone-ng=y
 CONFIG_PACKAGE_rclone-webui-react=y
@@ -1082,6 +1054,9 @@ CONFIG_PACKAGE_gowebdav=y
 CONFIG_PACKAGE_rclone=y
 CONFIG_PACKAGE_rclone-config=y
 CONFIG_PACKAGE_rsync=y
+CONFIG_RSYNC_xattr=y
+CONFIG_RSYNC_acl=y
+CONFIG_RSYNC_zstd=y
 CONFIG_PACKAGE_rsyncd=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ksmbd-server=y
@@ -1092,13 +1067,10 @@ CONFIG_PACKAGE_sshfs=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
 CONFIG_PACKAGE_iptables=y
-CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
-CONFIG_PACKAGE_iptables-mod-iprange=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_miniupnpd=y
-CONFIG_PACKAGE_bind-dig=y
-CONFIG_PACKAGE_bind-nslookup=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_dns2socks=y
 CONFIG_PACKAGE_dns2tcp=y
@@ -1113,32 +1085,23 @@ CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_git=y
 CONFIG_PACKAGE_git-http=y
-CONFIG_PACKAGE_brook=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_frpc=y
-CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_kcptun-client=y
 CONFIG_PACKAGE_kcptun-config=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_redsocks2=y
-CONFIG_PACKAGE_shadowsocks-libev-config=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
 CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
 CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
 CONFIG_PACKAGE_trojan=y
-CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_tuic-client=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_PACKAGE_xray-plugin=y
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_appfilter=y
 CONFIG_PACKAGE_ethtool=y
@@ -1156,13 +1119,10 @@ CONFIG_PACKAGE_ppp-mod-pppoe=y
 CONFIG_PACKAGE_rpcbind=y
 CONFIG_RPCBIND_LIBWRAP=y
 CONFIG_RPCBIND_RMTCALLS=y
-CONFIG_PACKAGE_simple-obfs-client=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_uclient-fetch=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_alsa-utils=y
-CONFIG_PACKAGE_fdk-aac=y
-CONFIG_PACKAGE_lame-lib=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_fdisk=y
@@ -1180,19 +1140,18 @@ CONFIG_PACKAGE_nfs-utils=y
 CONFIG_PACKAGE_nfs-utils-libs=y
 CONFIG_PACKAGE_ntfs3-mount=y
 CONFIG_PACKAGE_sysfsutils=y
+CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_fish=y
 CONFIG_PACKAGE_zsh=y
 CONFIG_PACKAGE_tmux=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
-CONFIG_PACKAGE_coreutils-fold=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_jshn=y
 CONFIG_PACKAGE_libjson-script=y
 CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_mount-utils=y
-CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_shellsync=y
 CONFIG_PACKAGE_smartmontools=y
 CONFIG_STRACE_NONE=y
-CONFIG_OVERRIDE_PKGS="chinadns-ng dns2socks dns2tcp gn hysteria ipt2socks lua-maxminddb lua-neturl luci-app-argon-config luci-app-ssr-plus microsocks mosdns naiveproxy open-app-filter redsocks2 shadowsocks-rust shadowsocksr-libev simple-obfs tcping trojan tuic-client v2ray-core v2ray-plugin v2raya xray-core xray-plugin"
+CONFIG_OVERRIDE_PKGS="chinadns-ng dns2socks dns2tcp gn hysteria ipt2socks lua-neturl luci-app-ssr-plus microsocks mosdns naiveproxy redsocks2 shadowsocks-rust shadowsocksr-libev simple-obfs tcping trojan tuic-client v2ray-core v2ray-plugin v2raya xray-core xray-plugin"
