--- a/configs/iw-master.config
+++ b/configs/iw-master.config
@@ -109,6 +109,7 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
+CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_GRUB_CONSOLE=y
 CONFIG_GRUB_BAUDRATE=115200
@@ -190,6 +191,7 @@ CONFIG_KERNEL_IPV6_PIMSM_V2=y
 CONFIG_KERNEL_IPV6_SEG6_LWTUNNEL=y
 CONFIG_KERNEL_SQUASHFS_FRAGMENT_CACHE_SIZE=3
 CONFIG_KERNEL_CC_OPTIMIZE_FOR_PERFORMANCE=y
+CONFIG_MOLD=y
 CONFIG_IPV6=y
 CONFIG_USE_SSTRIP=y
 CONFIG_SSTRIP_DISCARD_TRAILING_ZEROES=y
@@ -457,6 +459,7 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_MOUNT_CIFS=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_MOUNT_FLAGS=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_MOUNT_FSTAB=y
 CONFIG_BUSYBOX_DEFAULT_PIVOT_ROOT=y
+CONFIG_BUSYBOX_DEFAULT_SETSID=y
 CONFIG_BUSYBOX_DEFAULT_SWAPON=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_SWAPON_DISCARD=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_SWAPON_PRI=y
@@ -889,11 +892,15 @@ CONFIG_LIBCURL_THREADED_RESOLVER=y
 CONFIG_LIBCURL_UNIX_SOCKETS=y
 CONFIG_PACKAGE_libdaemon=y
 CONFIG_PACKAGE_libdbus=y
+CONFIG_PACKAGE_libdeflate=y
 CONFIG_PACKAGE_libdevmapper=y
+CONFIG_PACKAGE_libdht=y
 CONFIG_PACKAGE_libe2p=y
 CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libev=y
+CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libevent2-core=y
+CONFIG_PACKAGE_libevent2-pthreads=y
 CONFIG_PACKAGE_libexif=y
 CONFIG_PACKAGE_libexpat=y
 CONFIG_PACKAGE_libext2fs=y
@@ -905,6 +912,7 @@ CONFIG_PACKAGE_libffmpeg-full=y
 CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libgmp=y
 CONFIG_PACKAGE_libid3tag=y
+CONFIG_PACKAGE_libidn2=y
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libjpeg-turbo=y
 CONFIG_PACKAGE_libjson-c=y
@@ -936,6 +944,7 @@ CONFIG_PACKAGE_libpcre2=y
 CONFIG_PCRE2_JIT_ENABLED=y
 CONFIG_PACKAGE_libpcre2-32=y
 CONFIG_PACKAGE_libpopt=y
+CONFIG_PACKAGE_libpsl=y
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_libsmartcols=y
 CONFIG_PACKAGE_libss=y
@@ -950,7 +959,9 @@ CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libuclient=y
 CONFIG_PACKAGE_libucode=y
 CONFIG_PACKAGE_libudebug=y
+CONFIG_PACKAGE_libunistring=y
 CONFIG_PACKAGE_libustream-openssl=y
+CONFIG_PACKAGE_libutp=y
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_libvorbis=y
 CONFIG_PACKAGE_libwrap=y
@@ -984,7 +995,6 @@ CONFIG_PACKAGE_luci-app-homeproxy=y
 CONFIG_PACKAGE_luci-app-ksmbd=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
@@ -1000,6 +1010,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
 CONFIG_PACKAGE_luci-app-rclone=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui=y
 CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng=y
+CONFIG_PACKAGE_luci-app-transmission=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
@@ -1026,12 +1037,16 @@ CONFIG_PACKAGE_luci-i18n-homeproxy-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ksmbd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-rclone-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-transmission-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
 CONFIG_PACKAGE_ffmpeg=y
 CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_yt-dlp=y
+CONFIG_PACKAGE_transmission-cli=y
+CONFIG_PACKAGE_transmission-daemon=y
+CONFIG_PACKAGE_transmission-remote=y
+CONFIG_PACKAGE_transmission-web-control=y
 CONFIG_PACKAGE_rclone-ng=y
 CONFIG_PACKAGE_rclone-webui-react=y
 CONFIG_PACKAGE_ariang=y
@@ -1054,7 +1069,7 @@ CONFIG_RSYNC_zstd=y
 CONFIG_RSYNC_lz4=y
 CONFIG_RSYNC_xxhash=y
 CONFIG_PACKAGE_rsyncd=y
-CONFIG_PACKAGE_wget-nossl=y
+CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_ksmbd-server=y
 CONFIG_PACKAGE_nfs-kernel-server=y
 CONFIG_NFS_KERNEL_SERVER_V4=y
@@ -1074,6 +1089,8 @@ CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_openssh-sftp-avahi-service=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_zerotier=y
+CONFIG_ZEROTIER_ENABLE_DEBUG=y
+CONFIG_ZEROTIER_ENABLE_SELFTEST=y
 CONFIG_PACKAGE_git=y
 CONFIG_PACKAGE_git-http=y
 CONFIG_PACKAGE_cgi-io=y
@@ -1146,4 +1163,4 @@ CONFIG_PACKAGE_smartmontools=y
 CONFIG_STRACE_NONE=y
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-lua=y
-CONFIG_OVERRIDE_PKGS="luci-app-frpc luci-app-homeproxy"
+CONFIG_OVERRIDE_PKGS="luci-app-frpc"
